// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`embeddings 1`] = `
{
  "body": "{"model":"nomic-embed-text","input":"hi"}",
  "headers": {},
  "method": "POST",
  "url": "http://localhost:11434/api/embed",
}
`;

exports[`embeddings 2`] = `
{
  "body": "{"model":"text-embedding-ada-002","input":"hi"}",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://api.openai.com/v1/embeddings",
}
`;

exports[`embeddings 3`] = `
{
  "body": "{"model":"voyage-3-lite","input":"hi"}",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://api.voyageai.com/v1/embeddings",
}
`;

exports[`dump 1`] = `
{
  "embedding": {
    "model": "nomic-embed-text",
    "params": {
      "input": "hi",
    },
  },
  "options": {},
  "provider": "ollama",
}
`;

exports[`dump 2`] = `
{
  "embedding": {
    "model": "text-embedding-ada-002",
    "params": {
      "input": "hi",
    },
  },
  "options": {
    "apiKey": "<key>",
  },
  "provider": "openai",
}
`;

exports[`dump 3`] = `
{
  "embedding": {
    "model": "voyage-3-lite",
    "params": {
      "input": "hi",
    },
  },
  "options": {
    "apiKey": "<key>",
  },
  "provider": "voyageai",
}
`;
